# stylus-zk-erc721

./: .gitignore  Cargo.toml  README.md  package.json  setup.sh
app/: .env.example  .prettierrc  README.md  package.json  pnpm-lock.yaml
app/lib/: config.ts
app/pages/: _app.tsx  index.tsx
app/pages/api/: generate-proof.ts
app/styles/: Home.module.css
circuits/: package.json  pnpm-lock.yaml  token_ownership.circom
contracts/: Cargo.toml
contracts/src/: lib.rs  main.rs  verifying_key_stub.rs
scripts/: generate-oracle-keys.js  inject-vk.js
src/: lib.rs
