[package]
name = "stylus-zk-mint"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
alloy-primitives = { version = "1.3.1", default-features = false, features = ["tiny-keccak"] }
alloy-sol-types = "=1.3.1"
dotenv = "0.15.0"
hex = "0.4.3"
mini-alloc = "1.0.0"
stylus-sdk = "0.10.0"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = { version = "2", default-features = false, features = ["eip712"] }
eyre = "0.6.8"
stylus-test = "0.10.0"
serde_json = "1"

[features]
default = []
nft = []
verifier = []
vkeys = []
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
contract-client-gen = []

[[bin]]
name = "stylus-zk-mint"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"

opt-level = "z"

